[gd_scene load_steps=10 format=2]

[ext_resource path="res://18_objectFollow/follow.gd" type="Script" id=1]
[ext_resource path="res://18_objectFollow/Main.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 20, 20 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 10, 0.01, 10 )

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="CylinderShape" id=4]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.0509804, 0.741176, 0.694118, 1 )
metallic = 0.2
roughness = 0.22

[sub_resource type="BoxShape" id=7]

[node name="Spatial" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0913606, -0.0562429, 0.0848866 )
script = ExtResource( 2 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 3, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 2 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.60876, 1.0156, -11.6289 )

[node name="MeshInstance" type="MeshInstance" parent="Player"]
mesh = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
shape = SubResource( 4 )

[node name="Object" type="KinematicBody" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 5.10043, 0.537445, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Object"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Object"]
shape = SubResource( 7 )

[node name="Object2" type="KinematicBody" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 6.92746, 0.537445, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Object2"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Object2"]
shape = SubResource( 7 )

[node name="Object3" type="KinematicBody" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 8.806, 0.537445, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Object3"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Object3"]
shape = SubResource( 7 )

[node name="Object4" type="KinematicBody" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 10.8302, 0.537445, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Object4"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Object4"]
shape = SubResource( 7 )

[node name="Object5" type="KinematicBody" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 13.3337, 0.537445, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Object5"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Object5"]
shape = SubResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.738467, -0.382087, 0.555586, 0, 0.823958, 0.566651, -0.674289, -0.418453, 0.608466, 9.18045, 6.80202, 8.41693 )
